@@ -11,15 +11,16 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @CrossOrigin
 @EnableMethodSecurity
-@RequestMapping("transactions")
+@RequestMapping("/api/transactions")
 public class LedgerController {
-    private TransactionDAO transactionDao;
-    private TransactionTypeDAO transactionTypeDao;
 
+    private final TransactionDAO transactionDao;
+    private final TransactionTypeDAO transactionTypeDao;
 
     @Autowired
     public LedgerController(TransactionDAO transactionDao, TransactionTypeDAO transactionTypeDao) {
@@ -27,49 +28,43 @@ public class LedgerController {
         this.transactionTypeDao = transactionTypeDao;
     }
 
-
-
-
-
-
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     public List<Transactions> displayAllTransactions() {
         return transactionDao.getAllTransactions();
     }
 
-
     @GetMapping("/deposits")
     @ResponseStatus(HttpStatus.OK)
-    public List<TransactionType> getDeposits() {
-        return transactionTypeDao.getAllTransactionTypes().stream()
-                .filter(t -> t.getType().equals("Deposit"))
-                .toList();
-
+    public List<Transactions> getDeposits() {
+        return transactionDao.getAllTransactions().stream()
+                .filter(t -> t.getTransactionTypeID() == 1) // Assuming 1 is the ID for deposits
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/payments")
     @ResponseStatus(HttpStatus.OK)
-    public List<TransactionType> getPayments() {
-        return transactionTypeDao.getAllTransactionTypes().stream()
-                .filter(t -> t.getType().equals("Payment"))
-                .toList();
+    public List<Transactions> getPayments() {
+        return transactionDao.getAllTransactions().stream()
+                .filter(t -> t.getTransactionTypeID() == 2) // Assuming 2 is the ID for payments
+                .collect(Collectors.toList());
     }
 
     @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/addDeposit")
     @ResponseStatus(HttpStatus.CREATED)
     public Transactions addDeposit(@RequestBody Transactions transactions) {
-        Transactions newTransactions = transactionDao.addTransaction(transactions);
-        return newTransactions;
+        transactions.setTransactionTypeID(1); // Ensure this is set correctly for deposits
+        return transactionDao.addTransaction(transactions);
+    }
 
+    @PreAuthorize("hasRole('ADMIN')")
+    @PostMapping("/addPayment")
+    @ResponseStatus(HttpStatus.CREATED)
+    public Transactions addPayment(@RequestBody Transactions transactions) {
+        transactions.setTransactionTypeID(2); // Ensure this is set correctly for payments
+        return transactionDao.addTransaction(transactions);
     }
 
 
-
-
-
-    // unsure about what reports are exactly
-
 }
-
